DFR-2811-remove null check and return Collections.emptyList()